--- a/runsample.ipynb
+++ b/runsample.ipynb
@@ -3,7 +3,12 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-02-19T13:57:44.532538Z",
+     "start_time": "2019-02-19T13:57:43.731567Z"
+    }
+   },
    "outputs": [],
    "source": [
     "%load_ext rqalpha"
@@ -12,7 +17,12 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-02-19T13:57:45.272640Z",
+     "start_time": "2019-02-19T13:57:45.255140Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -65,9 +75,9 @@
       "  -smc, --stock-min-commission FLOAT\n",
       "                                  [sys_simulation] set minimum commission in\n",
       "                                  stock trades.\n",
+      "  --progress                      [sys_progress]show progress bar\n",
       "  --no-short-stock / --short-stock\n",
       "                                  [sys_risk] enable stock shorting\n",
-      "  --progress                      [sys_progress]show progress bar\n",
       "  --report PATH                   [sys_analyser] save report\n",
       "  -o, --output-file PATH          [sys_analyser] output result pickle file\n",
       "  -p, --plot / --no-plot          [sys_analyser] plot result\n",
@@ -99,8 +109,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-02-19T13:58:09.319627Z",
+     "start_time": "2019-02-19T13:57:56.676797Z"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -1770,7 +1785,7 @@
       "2017-05-03 WARN 订单创建失败: 可用资金不足。当前资金: 274651.36，000012.XSHG 下单所需资金: 274787.59。\n",
       "2017-05-04 WARN 订单创建失败: 可用资金不足。当前资金: 274651.36，000012.XSHG 下单所需资金: 274753.39。\n",
       "2017-05-05 WARN 订单创建失败: 可用资金不足。当前资金: 274651.36，000012.XSHG 下单所需资金: 274753.39。\n",
-      "[2018-08-22 11:48:58.862065] WARN: system_log: Missing Chinese fonts. Fallback to English.\n"
+      "[2019-02-19 21:58:09.137543] WARN: system_log: Missing Chinese fonts. Fallback to English.\n"
      ]
     },
     {
@@ -2821,7 +2836,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
